--- a/src/components/skill/skill.css
+++ b/src/components/skill/skill.css
@@ -6,19 +6,7 @@
   /* align-content: center; */
  /* } */
  
- .resume {
-    max-width: 1200px; 
-    display: flex;
-    flex-direction: column;
-    /* max-width: 800px;  */
-    /* margin: 0 auto; */
-    
 
-    /* margin: 20px auto; */
-    /* padding: 20px; */
-     /* box-shadow: 0 4px 8px rgba(0,0,0,0.1);  
-      */
- }  
 
 
 
